	  apps/examples/adc into the SAMA5D3x-EK configuration (2013-10-24).
	* include/nuttx/fs/ioctl.h and arch/arm/src/sama5/sam_adc.c:  Add
	  and ioctl command that can be used to trigger ADC/DAC conversion
	  (2015-10-25).
	* configs/spark:  Spark configuration updated by David Sidrane
	  (2013-10-25).
	* drivers/wireless/cc3000 and include/nuttx/wireless/cc3000:
	  CC3000 driver update from David Sidrane (2013-10-25).
	* arch/arm/src/sama5/chip/sam_isi.h:  Camera interface register
	  definitions added (2013-10-26).
	* audio/ and include/nuttx/audio/audio.h:  Updated audio subsystem
	  from Ken Pettit (2013-10-27).
	* drivers/audio/ and include/nuttx/audio/vs1053.h:  Updated
	  VS1053 driver from ken Pettit (2013-10-27).
	* configs/mikroe-stm32f4/: Updated configuration for the
	  Mikroe STM32F4 board from Ken Pettit (2013-10-27).
	* arch/arm/src/stm32/stm32_spi.c:  DMA-related fixes from Ken
	  Pettit (2013-10-27).
	* sched/sched_releasetcb.c: Fix a cornercase:  If sched_releasetcb()
	  is called as part of a failed pthread startup before the flags
	  field in the TCB has been initialized, then a crash occurs.
	  Pointed out by David Sidrane (2013-10-27)
	* arch/arm/src/sama5/sam_adc.c:  ADC now works in all implemented
	  modes:  single channel or multiple channel with sequencer support.
	  software trigger or timer trigger;  ADC channel interrupts or
	  DMA (2013-10-28).
	* nuttx/drivers/audio/vs1053.c and nuttx/include/nuttx/audio/audio.h:
	  Add logic to verify the audio sub-format.  From Ken Pettit (2013-10-28).

6.32 2013-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* configs/spark:  Spark configuration updated by David Sidrane
	  (2013-10-30).
	* drivers/wireless/cc3000 and include/nuttx/wireless/cc3000:
	  CC3000 driver updates from David Sidrane (2013-10-13).
	* arch/arm/src/sama5/chip/sam_ssc.h:  SSC register definition
	  header file (2013-10-30).
	* arch/arm/src/sama5/chip/sam_pwm.h:  PWM register definition
	  header file (2013-10-31).